--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - "elasticsearch:getjenny-es"
 
   manaus:
-    image: elegansio/manaus:1.0.3
+    image: elegansio/manaus:latest
     restart: unless-stopped
     volumes:
       - ./manaus/data:/manaus/data
