--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.2"
 services:
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:5.6.4
+    image: docker.elastic.co/elasticsearch/elasticsearch:6.1.0
     restart: unless-stopped
     command: elasticsearch
     ports:
@@ -16,10 +16,10 @@ services:
       - ./elasticsearch/config:/usr/share/elasticsearch/config
       - ./elasticsearch/logs:/usr/share/elasticsearch/logs
     environment:
-      - ES_JAVA_OPTS=-Xms1g -Xmx1g
+      - MAX_LOCKED_MEMORY=unlimited
 
   starchat:
-    image: elegansio/starchat:3.0.4
+    image: elegansio/starchat:4.0.0-rc1
     restart: unless-stopped
     command: ["/starchat/scripts/utils/wait-for-it.sh", "getjenny-es", "9200", "10", "/starchat/bin/starchat"]
     volumes:
@@ -32,12 +32,12 @@ services:
       - "elasticsearch:getjenny-es"
 
   manaus:
-    image: elegansio/manaus:1.0.8
+    image: elegansio/manaus:2.0.1
     restart: unless-stopped
     volumes:
       - ./manaus/data:/manaus/data
       - ./manaus/log:/manaus/log
-    command: ["/manaus/scripts/wait-for-it.sh", "getjenny-es", "9200", "5", "/manaus/bin/continuous-keywords-update", "--temp_data_folder", "/manaus/data", "--host_map", "getjenny-es=9300", "--interval_sec", "14400", "--word_frequencies", "/manaus/statistics_data/english/word_frequency.tsv", "--cluster_name", "starchat", "--index_name", "jenny-en-0"]
+    command: ["/manaus/scripts/wait-for-it.sh", "getjenny-es", "9200", "5", "/manaus/bin/continuous-keywords-update-all-indexes", "--temp_data_folder", "manaus/data", "--host_map", "getjenny-es=9300", "--interval_sec", "5", "--word_frequencies", "manaus/statistics_data", "--cluster_name", "starchat"]
     links:
       - "starchat:starchat"
       - "elasticsearch:getjenny-es"
