--- a/starchat/config/application.conf
+++ b/starchat/config/application.conf
@@ -1,5 +1,4 @@
 akka {
-  log-config-on-start = off
   loglevel = DEBUG
   stdout-loglevel = INFO
   loggers = ["akka.event.slf4j.Slf4jLogger"]
@@ -59,6 +58,8 @@ starchat {
 }
 
 es {
+  number_of_shards = 5
+  number_of_replicas = 1
   system_index_name = "starchat_system_0"
   system_refresh_dt_index_suffix = "refresh_decisiontable"
   common_index_default_org_pattern = "getjenny"
@@ -88,7 +89,7 @@ es {
   ignore_cluster_name = true
   enable_sniff = false
   enable_delete_application_index = true
-  enable_delete_system_index = true
+  enable_delete_system_index = false
   host_proto = "https"
   host_map = "getjenny-es=9200" // format is: host=port;host2=port2
 }
