--- a/elasticsearch/config/elasticsearch.yml
+++ b/elasticsearch/config/elasticsearch.yml
@@ -52,28 +52,26 @@ path.data: /usr/share/elasticsearch/data
 #
 # Set the bind address to a specific IP (IPv4 or IPv6):
 #
-http.host: 0.0.0.0
+network.host: 0.0.0.0
 #
 # Set a custom port for HTTP:
 #
-http.port: 9200
-
-transport.host: 0.0.0.0
-
+#http.port: 9200
+#
 # For more information, consult the network module documentation.
 #
 # --------------------------------- Discovery ----------------------------------
 #
-# Pass an initial list of hosts to perform discovery when new node is started:
+# Pass an initial list of hosts to perform discovery when this node is started:
 # The default list of hosts is ["127.0.0.1", "[::1]"]
 #
-#discovery.zen.ping.unicast.hosts: ["host1", "host2"]
+#discovery.seed_hosts: ["host1", "host2"]
 #
-# Prevent the "split brain" by configuring the majority of nodes (total number of master-eligible nodes / 2 + 1):
+# Bootstrap the cluster using an initial set of master-eligible nodes:
 #
-#discovery.zen.minimum_master_nodes: 3
+cluster.initial_master_nodes: ["starchat-0"]
 #
-# For more information, consult the zen discovery module documentation.
+# For more information, consult the discovery and cluster formation module documentation.
 #
 # ---------------------------------- Gateway -----------------------------------
 #
