--- a/starchat/config/application.conf
+++ b/starchat/config/application.conf
@@ -4,22 +4,43 @@ akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
 
-  http {
-    server-max-connections = 4096
-  }
-
-  default-dispatcher {
-    fork-join-executor {
-      parallelism-min = 16
-    }
-  }
-
   test {
     timefactor = 1
   }
+
+  http.server.remote-address-header = "on"
 }
 
 starchat {
+  dispatcher {
+    # Dispatcher is the name of the event-based dispatcher
+    type = Dispatcher
+    # What kind of ExecutionService to use
+    executor = "fork-join-executor"
+    # Configuration for the fork join pool
+    fork-join-executor {
+      # Min number of threads to cap factor-based parallelism number to
+      parallelism-min = 8
+      # Parallelism (threads) ... ceil(available processors * factor)
+      parallelism-factor = 3.0
+      # Max number of threads to cap factor-based parallelism number to
+      parallelism-max = 64
+    }
+    # Throughput defines the maximum number of messages to be
+    # processed per actor before the thread jumps to the next actor.
+    # Set to 1 for as fair as possible.
+    throughput = 5
+  }
+
+  blocking-dispatcher {
+    type = Dispatcher
+    executor = "thread-pool-executor"
+    thread-pool-executor {
+      fixed-pool-size = 4
+    }
+    throughput = 2
+  }
+
   auth_method = "basic_http"
   auth_credential_store = "es"
   auth_realm = "starchat"
@@ -59,7 +80,7 @@ starchat {
 
 es {
   number_of_shards = 5
-  number_of_replicas = 1
+  number_of_replicas = 2
   system_index_name = "starchat_system_0"
   system_refresh_dt_index_suffix = "refresh_decisiontable"
   common_index_default_org_pattern = "getjenny"
@@ -70,16 +91,20 @@ es {
   dt_index_suffix = "state"
   user_index_suffix = "user"
   term_index_suffix = "term"
+  feedback_index_suffix = "feedback"
   dt_query_min_threshold = 0.3
   dt_boost_exact_match_factor = 1000.0
-  dt_reload_check_delay = 5 // the delay to check if the analyzers needs to be reloaded, neg number for random
-  dt_reload_check_frequency = 30 // the frequency to check if the analyzers needs to be reloaded, -1 to disable
-  dt_max_tables = 1000 // max decision tables to keep in memory, 0 means no lmitation
+  dt_reload_check_frequency = 5 // the frequency to check if the analyzers needs to be reloaded, -1 to disable
+  cluster_node_alive_max_interval = 180 // if the node does not update the alive record for N seconds is considered dead
+  cluster_node_alive_sig_interval = 120 // set the alive record for the node every N seconds
+  cluster_node_clean_dead_interval = 240 // clean non-alive records every N seconds
+  cluster_clean_dt_loading_records_interval = 86400 // clean dt loading records for dead nodes
+  dt_max_tables = 10000 // max decision tables to keep in memory, 0 means no lmitation
   kb_query_min_threshold = 0.3
   dt_queries_score_mode = "max" // score mode for queries on DT other possible values are min, avg, total
   kb_nested_score_mode = "total" // score mode for Q/A on KB other possible values are max, min, avg
   kb_question_negative_minimum_match = "80%"
-  kb_question_negative_boost = -2.0f
+  kb_question_negative_boost = 2.0f
   kb_question_exact_match_boost = 1000.0
   dictSizeCacheMaxSize = 1000
   totalTermsCacheMaxSize = 1000
@@ -89,7 +114,7 @@ es {
   ignore_cluster_name = true
   enable_sniff = false
   enable_delete_application_index = true
-  enable_delete_system_index = false
+  enable_delete_system_index = true
   host_proto = "https"
   host_map = "getjenny-es=9200" // format is: host=port;host2=port2
 }
