--- a/starchat/config/application.conf
+++ b/starchat/config/application.conf
@@ -55,8 +55,17 @@ starchat {
     host = ${?HOST}
     port = 8443
     port = ${?PORT}
-    certificate = "/tls/certs/server.p12"
-    password = "uma7KnKwvh"
+    certificates {
+      pkcs12 {
+        keystore = "/tls/certs/server/keystore.p12"
+        password = "uma7KnKwvh"
+      }
+      jks {
+        keystore = "/tls/certs/server/keystore.jks"
+        password = "uma7KnKwvh"
+      }
+      format = "pkcs12"
+    }
     enable = true
   }
 
@@ -70,10 +79,29 @@ starchat {
 
   client {
     https {
-      keystore = "/tls/certs/starchat_keystore.p12"
-      keystore_type = "PKCS12"
-      keystore_password = "N7WQdx20"
+      certificates {
+        pkcs12 {
+          keystore = "/tls/certs/client/keystore.p12"
+          password = "N7WQdx20"
+        }
+        jks {
+          keystore = "/tls/certs/client/keystore.jks"
+          password = "N7WQdx20"
+        }
+        format = "pkcs12"
+      }
       disable_host_validation = true
+    }
+  }
+
+  actions {
+    SendEmailGJ {
+      enabled: false
+      username: "username"
+      password: "p4ssw0rd"
+      host: "smtp.gmail.com"
+      port: 587
+      from: "user@domain.com"
     }
   }
 }
@@ -116,5 +144,6 @@ es {
   enable_delete_application_index = true
   enable_delete_system_index = true
   host_proto = "https"
+  authentication = "ZWxhc3RpYzpyUmw0Q0NFUGpZZ2s5YWd3" //"elastic:rRl4CCEPjYgk9agw"
   host_map = "getjenny-es=9200" // format is: host=port;host2=port2
 }
